--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <h2>Stages professionnels</h2>
       </a>
 
-      <a href="compétences.html" class="section-button">
+      <a href="competences.html" class="section-button">
         <h2>Compétences</h2>
       </a>
 
       <a href="projets.html" class="section-button">
-        <h2>Projets</h2>
+        <h2>Portfolio</h2>
       </a>
       <a href="Cv.pdf" class="section-button">
         <h2>Cv</h2>
