--- a/formation.html
+++ b/formation.html
@@ -17,24 +17,27 @@
       <h1>Leibovici Ezechiel</h1>
 
       <div class="section">
-        <h2>Formations</h2>
-
+        <h2>Formations</h2> 
         <!-- Première formation -->
         <div class="formation">
-          <img src="univ.png" alt="Description de la formation 1">
+          <img src="univ.png" alt="Description de la formation 1" class="formation-img">
+          <div class="formation-info">
           <h3>BUT Informatique</h3>
           <p>Depuis 2022</p>
           <p>Préparation d’un BUT Informatique à 
             l’IUT A de Villeneuve d’Ascq, actuellement en deuxième année.</p>
+          </div>
         </div>
 
         <!-- Deuxième formation -->
         <div class="formation">
-          <img src="sj.png" alt="Description de la formation 2">
-          <h3>Pepiniere de Nancy</h3>
+          <img src="sj.png" alt="Description de la formation 2" class="formation-img">
+          <div class="formation-info">
+          <h3>Baccalauréat</h3>
           <p>2019 - 2022</p>
           <p>Baccalauréat spécialité Mathématiques et 
             NSI, option Maths Expert (Mention Bien) au lyceé Saint-Jean à Saint-Quentin.</p>
+          </div>
         </div>
 
         <!-- Ajoutez autant de formations que nécessaire -->
