--- a/stages.html
+++ b/stages.html
@@ -21,23 +21,25 @@
 
         <!-- Première formation -->
         <div class="formation">
-          <img src="ABI.jpg" alt="Description de la formation 1">
+          <img src="ABI.jpg" alt="Description de la formation 1" class="formation-img">
+          <div class="formation-info">
           <h3>ABI Informatique</h3>
           <p>2020</p>
           <p> Vente, installation et réparation de matériel 
             informatique (entreprise ABI, Saint-Quentin, Aisne)
             </p>
         </div>
-
+      </div>
         <!-- Deuxième formation -->
         <div class="formation">
-          <img src="Pepiniere.jpg" alt="Description de la formation 2">
+          <img src="Pepiniere.jpg" alt="Description de la formation 2" class="formation-img">
+          <div class="formation-info">
           <h3>Pepiniere de Nancy</h3>
           <p>2019</p>
           <p>Soigneur animalier à la Pépinière de Nancy 
             (Meurthe-et-Moselle) dans le contexte de mon stage de 3ème</p>
         </div>
-
+      </div>
         <!-- Ajoutez autant de formations que nécessaire -->
 
       </div>
