--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leibovici Ezechiel - Stages</title>
+  <title>Leibovici Ezechiel - Formations</title>
   <link rel="stylesheet" href="divisionstyle.css">
 </head>
 <body class="formations-body">
@@ -17,39 +17,32 @@
       <h1>Leibovici Ezechiel</h1>
 
       <div class="section">
-        <h2>Competences</h2>
+        <h2>Portfolio</h2>
 
         <!-- Première formation -->
         <div class="formation">
-          <img src="java.jpg" alt="Description de la formation 1" class="formation-img">
+          <img src="Moulinator.PNG" alt="Description de la formation 1" class="formation-img">
           <div class="formation-info">
-            <h3>Java</h3>
-            <p>Intermédiaire</p>
-          </div>
+        
+          
+          <h3>Moulinator</h3>
+          <p>Java, Agilité, Git</p>
+          <p>Réalisation du jeu moulinator inspiré du jeu du moulin. Utilisation de la méthode agile. Dans le cadre de ce projet, nous nous sommes mis dans la peau d'une équipe scrum et ce en étant encadré par des scrums master.</p>
+        </div>
         </div>
 
         <!-- Deuxième formation -->
         <div class="formation">
-          <img src="c.png" alt="Description de la formation 2" class="formation-img">
+          <img src="Monstre.jpg" alt="Description de la formation 2" class="formation-img">
           <div class="formation-info">
-            <h3>C</h3>
-            <p>Novice</p>
-          </div>
+          <h3>Jeu du chasseur et du monstre</h3>
+          <p>Java, Git</p>
+          <p>Je suis en train de programmer un jeu du 
+            chasseur et du monstre en coopération avec 3 
+            élèves, l’objectif du projet est de réaliser le jeu 
+            ainsi qu’un bot capable d’y jouer efficacement. </p>
         </div>
-        <div class="formation">
-          <img src="sql.png" alt="Description de la formation 3" class="formation-img">
-          <div class="formation-info">
-            <h3>sql</h3>
-            <p>Intermédiaire</p>
-          </div>
-        </div>
-        <div class="formation">
-          <img src="htmlcss.png" alt="Description de la formation 4" class="formation-img">
-          <div class="formation-info">
-            <h3>Html / Css</h3>
-            <p>Novice</p>
-          </div>
-        </div>
+    </div>
 
         <!-- Ajoutez autant de formations que nécessaire -->
 
