Ajout dernière image

--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
 
         <!-- Deuxième formation -->
         <div class="formation">
-          <img src="Monstre.jpg" alt="Description de la formation 2" class="formation-img">
+          <img src="Monstre.png" alt="Description de la formation 2" class="formation-img">
           <div class="formation-info">
           <h3>Jeu du chasseur et du monstre</h3>
           <p>Java, Git</p>
