--- a/formation.html
+++ b/formation.html
@@ -25,7 +25,7 @@
           <h3>BUT Informatique</h3>
           <p>Depuis 2022</p>
           <p>Préparation d’un BUT Informatique à 
-            l’IUT A de Villeneuve d’Ascq, actuellement en deuxième année.</p>
+            l’IUT A de Villeneuve d’Ascq, actuellement en troisième année.</p>
           </div>
         </div>
 
