--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <div class="left-side">
       <div class="Profil">
         <h1>Profil</h1>
-        <p>Passionné de nouvelles technologies, je suis actuellement un 
-          cursus en BUT Informatique à 
-          l’IUT de Villeneuve d’Ascq. Curieux et volontaire, j’ai à cœur 
+        <p>Passionné de nouvelles technologies, je suis actuellement en fin de 
+          cursus de BUT Informatique à l’IUT de Villeneuve d’Ascq. Curieux et volontaire, j’ai à cœur 
           d’enrichir mon expérience professionnelle tout en poursuivant 
-          mes études.</p>
-
+          mes études. Je suis actuellement à la recherche d'un Stage de 16 semaines afin de pouvoir valider mon année.</p>
       </div>
 
       <div class="section">
