--- a/projets.html
+++ b/projets.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leibovici Ezechiel - Formations</title>
+  <title>Leibovici Ezechiel - Projets</title>
   <link rel="stylesheet" href="divisionstyle.css">
 </head>
 <body class="formations-body">
