--- a/competences.html
+++ b/competences.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leibovici Ezechiel - Stages</title>
+  <title>Leibovici Ezechiel - Compétences</title>
   <link rel="stylesheet" href="divisionstyle.css">
 </head>
 <body class="formations-body">
@@ -17,41 +17,70 @@
       <h1>Leibovici Ezechiel</h1>
 
       <div class="section">
-        <h2>Competences</h2>
+        <h2>Compétences</h2>
 
-        <!-- Première formation -->
+        <!-- Compétence Java -->
         <div class="formation">
-          <img src="java.jpg" alt="Description de la formation 1" class="formation-img">
+          <img src="java.jpg" alt="Description de la formation Java" class="formation-img">
           <div class="formation-info">
             <h3>Java</h3>
-            <p>Intermédiaire</p>
+            <p>Avancé</p>
+            <p>Développement d'applications orientées objet, création d'algorithmes complexes et utilisation de frameworks comme Spring ou Hibernate.</p>
           </div>
         </div>
 
-        <!-- Deuxième formation -->
+        <!-- Compétence C -->
         <div class="formation">
-          <img src="c.png" alt="Description de la formation 2" class="formation-img">
+          <img src="c.png" alt="Description de la formation C" class="formation-img">
           <div class="formation-info">
             <h3>C</h3>
             <p>Novice</p>
-          </div>
-        </div>
-        <div class="formation">
-          <img src="sql.png" alt="Description de la formation 3" class="formation-img">
-          <div class="formation-info">
-            <h3>sql</h3>
-            <p>Intermédiaire</p>
-          </div>
-        </div>
-        <div class="formation">
-          <img src="htmlcss.png" alt="Description de la formation 4" class="formation-img">
-          <div class="formation-info">
-            <h3>Html / Css</h3>
-            <p>Novice</p>
+            <p>Notions de base en programmation procédurale, gestion de la mémoire et utilisation pour des applications système.</p>
           </div>
         </div>
 
-        <!-- Ajoutez autant de formations que nécessaire -->
+        <!-- Compétence SQL -->
+        <div class="formation">
+          <img src="sql.png" alt="Description de la formation SQL" class="formation-img">
+          <div class="formation-info">
+            <h3>SQL</h3>
+            <p>Avancé</p>
+            <p>Conception et gestion de bases de données relationnelles, rédaction de requêtes complexes et optimisation des performances.</p>
+          </div>
+        </div>
+                <!-- Compétence Spring Boot -->
+        <div class="formation">
+          <img src="spring.jpg" alt="Description de la formation Spring Boot" class="formation-img">
+          <div class="formation-info">
+            <h3>Spring Boot</h3>
+            <p>Avancé</p>
+            <p>Création de microservices, gestion de dépendances avec Spring Boot et développement d'API REST.</p>
+          </div>
+        </div>
+
+        <!-- Compétence NoSQL -->
+        <div class="formation">
+          <img src="mongoDB.png" alt="Description de la formation NoSQL" class="formation-img">
+          <div class="formation-info">
+            <h3>NoSQL</h3>
+            <p>Intermédiaire</p>
+            <p>Utilisation de bases de données NoSQL comme MongoDB, Redis ou Cassandra, stockage de données non relationnelles et gestion des données volumineuses.</p>
+          </div>
+        </div>
+
+        <!-- Compétence React -->
+        <div class="formation">
+          <img src="React.png" alt="Description de la formation React" class="formation-img">
+          <div class="formation-info">
+            <h3>React JS</h3>
+            <p>Intermédiaire</p>
+            <p>Développement d'interfaces utilisateur dynamiques et interactives avec React, composants réutilisables et intégration d'API.</p>
+          </div>
+        </div>
+
+
+
+        <!-- Ajoutez autant de compétences que nécessaire -->
 
       </div>
     </div>
@@ -60,7 +89,7 @@
   <!-- Lien de retour vers cv.html en pied de page -->
   <footer>
     <a href="index.html" class="section-button">
-      <h2>Retour vers l'accueil </h2>
+      <h2>Retour vers l'accueil</h2>
     </a>
   </footer>
 
