--- a/stages.html
+++ b/stages.html
@@ -40,6 +40,14 @@
             (Meurthe-et-Moselle) dans le contexte de mon stage de 3ème</p>
         </div>
       </div>
+      <div class="formation">
+        <img src="Caissmag.jpg" alt="Description de la formation 2" class="formation-img">
+        <div class="formation-info">
+        <h3>Caiss'Mag Systèmes</h3>
+        <p>Avril 2024 - Juin 2024</p>
+        <p>Réalisation de plusieurs outils web en JEE pour l'entreprise Caiss'Mag Systèmes : informatisation de données physiques, création d'un planning, ainsi que d'un outil de configuration de caisses. Ce stage m'a permis de mettre en pratique les compétences en JEE acquises lors de mon cursus.</p>
+      </div>
+    </div>
         <!-- Ajoutez autant de formations que nécessaire -->
 
       </div>
